# agentic-adversarial-chess

./: .gitignore  .gitmodules  ARCHITECTURE.MD  README.md  environment.yml  pyproject.toml
chess_logic/: package.xml  setup.cfg
chess_logic/chess_logic/: board_state_node.py  test_chess_logic.py
src/arm_controller/: package.xml  setup.cfg  setup.py
src/arm_controller/arm_controller/: gripper_interface.py  moveit_client.py  pick_place_server.py  waypoint_planner.py
src/arm_controller/config/: kinematics.yaml
src/arm_controller/launch/: arm_controller.launch.py
src/arm_controller/test/: test_gripper_interface.py  test_pick_place_integration.py  test_waypoint_planner.py
src/board_localization/: setup.cfg
src/board_localization/board_localization/: __init__.py  board_geometry.py  tf_broadcaster.py
src/board_localization/config/: board_params.yaml
src/board_localization/launch/: board_localization.launch.py
src/board_localization/test/: test_board_geometry.py  test_calibration.py  test_tf_frames.py
src/chess_engine/: package.xml  setup.cfg  setup.py
src/chess_engine/chess_engine/: board_state_node.py  fen_parser.py  stockfish_node.py
src/chess_interfaces/: CMakeLists.txt
src/chess_interfaces/action/: GraspPlanning.action
src/chess_interfaces/msg/: GameState.msg  PickPlaceTask.msg
src/chess_interfaces/srv/: GetGraveyardPose.srv
src/chess_robot_description/: CMakeLists.txt  package.xml
src/chess_robot_description/config/: board_params.yaml  fr3_controllers.yaml  joint_limits.yaml
src/chess_robot_description/launch/: move_group.launch.py  spawn_chess_pieces.launch.py  spawn_robot.launch.py
src/chess_robot_description/models/bishop_black/: model.sdf
src/chess_robot_description/models/bishop_white/: model.sdf
src/chess_robot_description/models/king_white/: model.sdf
src/chess_robot_description/models/pawn_black/: model.config  model.sdf
src/chess_robot_description/models/pawn_white/: model.sdf
src/chess_robot_description/models/rook_white/: model.sdf
src/chess_robot_description/moveit_config/: kinematics.yaml  moveit_controllers.yaml
src/chess_robot_description/moveit_config/config/: dual_fr3.srdf
src/chess_robot_description/scripts/: spawn_pieces.py
src/chess_robot_description/urdf/: dual_fr3.urdf.xacro  franka_arm.ros2_control.xacro
src/chess_robot_description/worlds/: chess_table.sdf
src/fr3_chess_bringup/: package.xml  setup.cfg  setup.py
src/fr3_chess_bringup/config/: fr3_controllers.yaml
src/fr3_chess_bringup/fr3_chess_bringup/: simple_pick_place.py
src/fr3_chess_bringup/launch/: pick_and_place.launch.py
src/fr3_chess_logic/: package.xml  setup.cfg  setup.py
src/fr3_chess_logic/fr3_chess_logic/: board_state_node.py  test_chess_logic.py
src/game_coordinator/: package.xml  setup.cfg
src/game_coordinator/game_coordinator/: behaviors.py  coordinator_node.py
src/grasp_planner/: setup.cfg
src/grasp_planner/config/: gpd_params.yaml
src/grasp_planner/grasp_planner/: lookup_grasps.py
src/grasp_planner/test/: test_grasp_candidates.py  test_grasp_filter.py  test_lookup_grasps.py
src/move_translator/: setup.cfg
src/move_translator/config/: board_params.yaml
src/move_translator/move_translator/: __init__.py  board_geometry.py  move_translator_node.py  special_moves.py
src/move_translator/test/: test_board_geometry.py  test_decomposer.py  test_special_moves.py
src/perception/: README.md  setup.cfg
src/perception/config/: camera_params.yaml
src/perception/scripts/: occupancy_view.py
ws/src/board_localization/: package.xml  setup.py
ws/src/board_localization/board_localization/: board_geometry.py  board_geometry.py.old  calibration.py  square_lookup_service.py
ws/src/board_localization/config/: board_params.yaml
ws/src/board_localization/configs/: board_params.yaml
ws/src/board_localization/launch/: board_localization.launch.py
ws/src/board_localization/test/: test_calibration.py  test_tf_frames.py
ws/src/chess_engine_interfaces/: CMakeLists.txt  package.xml
ws/src/chess_engine_interfaces/action/: GraspPlanning.action  PickPlace.action
ws/src/chess_engine_interfaces/msg/: GameState.msg  PickPlaceTask.msg
ws/src/chess_engine_interfaces/srv/: GetGraveyardPose.srv  GetSquarePose.srv  WorldToSquare.srv
ws/src/chess_robot_bringup/: CMakeLists.txt  package.xml  setup.py
ws/src/chess_robot_bringup/config/: stockfish_black.yaml  stockfish_black_params.yaml  stockfish_white.yaml  stockfish_white_params.yaml
ws/src/chess_robot_bringup/launch/: nodes_only.launch.py  sim.launch.py
ws/src/chess_robot_bringup/scripts/: set_initial_pose.py
ws/src/chess_robot_description/: CMakeLists.txt  package.xml
ws/src/chess_robot_description/config/: board_params.yaml  fr3_controllers.yaml
ws/src/chess_robot_description/launch/: move_group.launch.py  spawn_robot.launch.py
ws/src/chess_robot_description/models/king_black/: model.sdf
ws/src/chess_robot_description/models/knight_black/: model.sdf
ws/src/chess_robot_description/models/knight_white/: model.sdf
ws/src/chess_robot_description/models/pawn/: model.sdf
ws/src/chess_robot_description/models/queen_black/: model.sdf
ws/src/chess_robot_description/moveit_config/: moveit_controllers.yaml  ompl_planning.yaml
ws/src/chess_robot_description/scripts/: spawn_32_pawns.py  spawn_pieces.py
ws/src/chess_robot_description/urdf/: dual_fr3.urdf.xacro  franka_arm.ros2_control.xacro
ws/src/chess_robot_description/worlds/: chess_table.sdf
ws/src/grasp_planner/: package.xml  setup.py
ws/src/grasp_planner/grasp_planner/: __init__.py  gpd_client.py  grasp_candidates.py  grasp_filter.py  grasp_planner_node.py  lookup_grasps.py
ws/src/grasp_planner/test/: test_grasp_candidates.py  test_grasp_filter.py  test_lookup_grasps.py
ws/src/move_translator/: package.xml  setup.py
ws/src/move_translator/config/: board_params.yaml
ws/src/move_translator/move_translator/: board_geometry.py  move_decomposer.py  move_translator_node.py  special_moves.py
ws/src/move_translator/test/: test_board_geometry.py  test_decomposer.py  test_special_moves.py
(+81 files in other folders)
