[metadata]
name = chess_logic
version = 0.0.1
maintainer = Your Name
maintainer_email = your@email.com
description = Chess logic package for fr3 embodied AI chess
license = MIT

[options]
packages = chess_logic
install_requires = setuptools

[options.entry_points]
console_scripts =
    board_state_node = chess_logic.board_state_node:main
    stockfish_node = chess_logic.stockfish_node:main