[metadata]
name = arm_controller
version = 0.1.0
maintainer = Tristan
maintainer_email = tristan@example.com
description = MoveIt 2 pick-and-place action server for the Franka Panda arms.
license = MIT

[options]
packages = find:
install_requires =
    setuptools


[options.packages.find]
exclude = test*

[options.entry_points]
console_scripts =
    pick_place_server_white = arm_controller.pick_place_server:main_white
    pick_place_server_black = arm_controller.pick_place_server:main_black

[options.data_files]
share/ament_index/resource_index/packages =
    resource/arm_controller
share/arm_controller =
    package.xml
share/arm_controller/config =
    config/arm_white.yaml
    config/arm_black.yaml

[develop]
script_dir = $base/lib/arm_controller

[install]
install_scripts = $base/lib/arm_controller


[options.data_files]
share/ament_index/resource_index/packages =
    resource/arm_controller
share/arm_controller =
    package.xml
share/arm_controller/launch =
    launch/arm_controller.launch.py
share/arm_controller/config =
    config/arm_white.yaml
    config/arm_black.yaml
