[metadata]
name = board_localization
version = 0.1.0
maintainer = Tristan
maintainer_email = tristan@example.com
description = Publishes TF frames for all 64 board squares and graveyard slots.
license = MIT

[options]
packages = find:
install_requires =
    setuptools

[options.packages.find]
exclude = test*

[options.entry_points]
console_scripts =
    board_tf_broadcaster = board_localization.tf_broadcaster:main
    square_lookup_service = board_localization.square_lookup_service:main

[options.data_files]
share/ament_index/resource_index/packages =
    resource/board_localization
share/board_localization =
    package.xml
share/board_localization/config =
    config/board_params.yaml
share/board_localization/launch =
    launch/board_localization.launch.py

[develop]
script_dir = $base/lib/board_localization

[install]
install_scripts = $base/lib/board_localization
