<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_engine</name>
  <version>0.0.1</version>
  <description>Chess engine: authoritative board state node and per-color Stockfish service.</description>
  <maintainer email="sivachandrankarthik@gmail.com">Karthik Sivachandran</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>chess_engine_interfaces</depend>

  <exec_depend>python3-chess</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
