[metadata]
name = chess_engine
version = 0.0.1
maintainer = Karthik Sivachandran
maintainer_email = sivachandrankarthik@gmail.com
description = Chess engine package: authoritative board state and per-color Stockfish service.
license = MIT

[options]
packages = find:
install_requires =
    setuptools
    chess

[options.packages.find]
exclude = test*

[options.entry_points]
console_scripts =
    board_state_node = chess_engine.board_state_node:main
    stockfish_node = chess_engine.stockfish_node:main

[options.data_files]
share/ament_index/resource_index/packages =
    resource/chess_engine
share/chess_engine =
    package.xml
share/chess_engine/config =
    config/stockfish_params.yaml

[develop]
script_dir = $base/lib/chess_engine

[install]
install_scripts = $base/lib/chess_engine

