[metadata]
name = game_coordinator
version = 0.0.1
maintainer = Karthik Sivachandran
maintainer_email = sivachandrankarthik@gmail.com
description = Top-level py_trees behavior tree orchestrating the chess game loop.
license = MIT

[options]
packages = find:
install_requires =
    setuptools
    py_trees
    py_trees_ros

[options.packages.find]
exclude = test*

[options.entry_points]
console_scripts =
    coordinator_node = game_coordinator.coordinator_node:main

[options.data_files]
share/ament_index/resource_index/packages =
    resource/game_coordinator
share/game_coordinator =
    package.xml


[develop]
script_dir = $base/lib/game_coordinator

[install]
install_scripts = $base/lib/game_coordinator

