[metadata]
name = grasp_planner
version = 0.1.0
maintainer = Tristan
maintainer_email = tristan@example.com
description = GPD-based and lookup-table grasp planner for chess pieces.
license = MIT

[options]
packages = find:
install_requires =
    setuptools


[options.packages.find]
exclude = test*

[options.entry_points]
console_scripts =
    grasp_planner_node = grasp_planner.grasp_planner_node:main

[options.data_files]
share/ament_index/resource_index/packages =
    resource/grasp_planner
share/grasp_planner =
    package.xml
share/grasp_planner/config =
    config/gpd_params.yaml

[develop]
script_dir = $base/lib/grasp_planner

[install]
install_scripts = $base/lib/grasp_planner

