[metadata]
name = move_translator
version = 0.1.0
maintainer = Tristan
maintainer_email = tristan@example.com
description = Translates FEN + UCI chess moves into world-frame pick-and-place task queues.
license = MIT

[options]
packages = find:
install_requires =
    setuptools
    chess

[options.packages.find]
exclude = test*

[options.entry_points]
console_scripts =
    move_translator_node = move_translator.move_translator_node:main

[options.data_files]
share/ament_index/resource_index/packages =
    resource/move_translator
share/move_translator =
    package.xml
share/move_translator/config =
    config/board_params.yaml

[develop]
script_dir = $base/lib/move_translator

[install]
install_scripts = $base/lib/move_translator

