[metadata]
name = perception
version = 0.0.0
maintainer = sandov22
maintainer_email = sandov22@todo.todo
description = Board state and piece perception for the chess robots.
license = Apache-2.0

[options]
packages = find:
install_requires =
    setuptools


[options.packages.find]
exclude = test*

[options.entry_points]
console_scripts =
    board_verifier = perception.board_verifier:main

[options.data_files]
share/ament_index/resource_index/packages =
    resource/perception
share/perception =
    package.xml
share/perception/config =
    config/camera_params.yaml

[develop]
script_dir = $base/lib/perception

[install]
install_scripts = $base/lib/perception

