<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_interfaces</name>
  <version>0.1.0</version>
  <description>
    Custom ROS 2 message, service, and action interfaces for the chess robot system.

    Messages:
      GameState       — full game state for the coordinator
      PickPlaceTask   — single pick-and-place task from move_translator

    Services:
      GetSquarePose     — algebraic square → world-frame PoseStamped
      GetGraveyardPose  — color + slot → world-frame PoseStamped
      WorldToSquare     — world (x,y) → algebraic square

    Actions:
      PickPlace       — arm controller pick-and-place execution
      GraspPlanning   — grasp planner pose generation
  </description>
  <maintainer email="tristan@example.com">Tristan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>