<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_robot_bringup</name>
  <version>0.0.0</version>
  <description>Top-level launch and config for the chess robot stack.</description>
  <maintainer email="sandov22@todo.todo">sandov22</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>chess_robot_description</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
