<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_robot_bringup</name>
  <version>0.1.0</version>
  <description>
    Top-level launch files and configuration for the chess robot system.
    Orchestrates Gazebo, board_localization, chess_engine, move_translator,
    grasp_planner, arm_controller, and game_coordinator.
  </description>
  <maintainer email="tristan@example.com">Tristan</maintainer>
  <license>MIT</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>chess_interfaces</exec_depend>
  <exec_depend>board_localization</exec_depend>
  <exec_depend>move_translator</exec_depend>
  <exec_depend>grasp_planner</exec_depend>
  <exec_depend>arm_controller</exec_depend>
  <exec_depend>chess_engine</exec_depend>
  <exec_depend>game_coordinator</exec_depend>
  <exec_depend>chess_robot_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>